# quo-vaidis-evolution

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: functional_requirements.md  project-description.md  source_description.md
simulation-wasm/: Cargo.toml
simulation-wasm/src/: lib.rs
src/: main.ts  simulation.worker.ts  style.css
